--- a/css/main.css
+++ b/css/main.css
@@ -184,10 +184,6 @@ body {
     margin-bottom: 24px;
 }
 
-.work {
-    
-}
-
 .right-header {
     margin-bottom: 8px;
 }
@@ -217,4 +213,39 @@ body {
     line-height: 1.71;
     color: var(--text-color);
     margin-left: 20px;
+}
+
+.university-name {
+    display: block;
+    max-width: 410px;
+    color: var(--akcent-color);
+}
+
+.university-name:hover,
+.university-name:focus {
+    color: #cc8460;
+}
+
+.courses-item{
+    margin-bottom: 5px;
+}
+
+.courses-name {  
+    margin-bottom: auto;
+}
+
+.company-name {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.25;
+    color: var(--akcent-color);
+}
+
+.company-name:hover,
+.company-name:focus {
+    color: #cc8460;
+}
+
+.date-text-curses {
+    margin-bottom: auto;
 }
